discussion/kv_engine/164338/164338_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49040: Maintain in memory scope data size as collections are flushed

VB::Manifest now maps from scope-id to a VB::ScopeEntry that stores
all about a scope, that is the (new) data-size and the name.

As the flusher updates the collection data-size, a new call to
updateScopeDataSize will find the collection's VB::ScopeEntry and
update the counter.

Note: With this commit warmup will reset the scope data-size to 0, a
later commit will warmup and set the initial size.

Change-Id: I2b7c05e0b06975a28f4b57b27fea97cfa11cc98e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-10-26 08:55:22.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-26 09:43:59.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35130/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1092:19:
error: no member named "getDataLimit" in "Collections::VB::ScopeEntry"; did you mean "getDataSize"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35130/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41367/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/collections/vbucket_manifest.cc(1092): error C2039: "getDataLimit": is not a member of "Collections::VB::ScopeEntry" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41367/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13644/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1092:19: error: no member named "getDataLimit" in "Collections::VB::ScopeEntry"; did you mean "getDataSize"? [clang-diagnostic-error]
        if (value.getDataLimit()) {
                  ^~~~~~~~~~~~
                  getDataSize
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/vbucket_manifest_scope_entry.h:37:12: note: "getDataSize" declared here
    size_t getDataSize() const {
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1096:37: error: no member named "getDataLimit" in "Collections::VB::ScopeEntry" [clang-diagnostic-error]
                              value.getDataLimit().value());
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/vbucket_manifest_scope_entry.h:18:1: warning: nested namespaces can be concatenated [modernize-concat-nested-namespaces]
namespace Collections {
^~~~~~~~~~~~~~~~~~~~~~~
namespace Collections::VB

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13644/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1092:19:
error: no member named "getDataLimit" in "Collections::VB::ScopeEntry"; did you mean "getDataSize"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13644/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3277/ : FAILURE

Compile error at [2021-10-26T09:07:33.590Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1092:19:
error: no member named "getDataLimit" in "Collections::VB::ScopeEntry"; did you mean "getDataSize"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3277/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15256/ : FAILURE

Compile error at [2021-10-26T09:28:31.240Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1092:19:
error: ?std::tuple_element<1, const std::pair<const ScopeID, Collections::VB::ScopeEntry> >::type? {aka ?const class Collections::VB::ScopeEntry?} has no member named ?getDataLimit?; did you mean ?getDataSize??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15256/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14420/ : FAILURE

Compile error at [2021-10-26T09:21:01.867Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@2/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1092:19:
error: no member named "getDataLimit" in "Collections::VB::ScopeEntry"; did you mean "getDataSize"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14420/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16212/ : FAILURE

Compile error at [2021-10-26T09:18:05.925Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1092:19:
error: no member named "getDataLimit" in "Collections::VB::ScopeEntry"; did you mean "getDataSize"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16212/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23593/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15537/ : FAILURE

Compile error at [2021-10-26T09:40:45.368Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1092:19:
error: ?std::tuple_element<1, const std::pair<const ScopeID, Collections::VB::ScopeEntry> >::type? {aka ?const class Collections::VB::ScopeEntry?} has no member named ?getDataLimit?; did you mean ?getDataSize??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15537/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3348/ : FAILURE

Compile error at [2021-10-26T09:24:19.743Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@3/kv_engine/engines/ep/src/collections/vbucket_manifest.cc:1092:19:
error: ?std::tuple_element<1, const std::pair<const ScopeID, Collections::VB::ScopeEntry> >::type? {aka ?const class Collections::VB::ScopeEntry?} has no member named ?getDataLimit?; did you mean ?getDataSize??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3348/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12443/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
